--- a/Client/day_blog/src/Homecomponents/Home.css
+++ b/Client/day_blog/src/Homecomponents/Home.css
@@ -1,12 +1,11 @@
 .background,.homebackground{
     z-index: -1;
-    background-color: #E9D5DA;
-    height: 100%;
+    /* background-color: #E9D5DA; */
    }
 .Homepage-container{
     width: 100%;
     height: 100%;
-    background-color: #E9D5DA;
+    /* background-color: #E9D5DA; */
     
 }
 .posts{
@@ -30,7 +29,7 @@
     overflow: hidden;
     font-size: 20px;
     border: 1px solid #aaa8a7;
-    background-color: #E9D5DA;
+    /* background-color: #E9D5DA; */
     color: black;
 }
 .singlepost{
@@ -41,6 +40,5 @@
 }
 b{
     color: black;
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
